--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "element-plus": "^2.1.10",
     "pinia": "^2.0.13",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.25",
@@ -22,6 +23,7 @@
     "sass": "^1.50.1",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
     "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^0.34.7"
